maintainIT2/src/objects/Work_Order__c.object
<CustomObject>
    <description>Work Orders</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account</description>
        <inlineHelpText>Customer Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Account)</relationshipLabel>
        <relationshipName>Work_Orders_Acct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Code__c</fullName>
        <description>Action Code:  Used with Failure, Cause and Action Codes for reliability analysis - User Defined</description>
        <inlineHelpText>Action Code:  Used with Failure, Cause and Action Codes for reliability analysis</inlineHelpText>
        <label>Action Code</label>
        <picklist>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Default_Planner__c</fullName>
        <description>Asset Default Planner</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset Default Planner</inlineHelpText>
        <label>Asset Default Planner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Group (Used to Reference &amp; Organize Model Work Orders by Asset Group)</description>
        <inlineHelpText>Asset Group (Used to Reference &amp; Organize Model Work Orders by Asset Group)</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>Maintenance_Group__c</referenceTo>
        <relationshipLabel>Model Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Order Assignee - Lookup to User.  Work Orders can also be assigned at the Work Order Task.</description>
        <inlineHelpText>Work Order Assignee - Lookup to User.  Work Orders can also be assigned at the Work Order Task (recommended approach).</inlineHelpText>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Assigned Vendor is a Lookup Reference to the Account where Vendor = True</description>
        <inlineHelpText>The Assigned Vendor is a Lookup Reference to the Account where Vendor = True</inlineHelpText>
        <label>Assigned Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select a Vendor to Assign.  You may clear this filter to assign to ANY type of Account.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assigned Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMRVAWOC__c</fullName>
        <description>Cumulative Meter Reading Value at Work Order Completion.  System populated via workflow.  Field Security should be set to read only for all profiles.</description>
        <inlineHelpText>Cumulative Meter Reading Value at Work Order Completion.  System populated via workflow.  Field Security should be set to read only for all profiles.</inlineHelpText>
        <label>Cum Meter Reading at WO Comp</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cause_Code__c</fullName>
        <description>Cause Code:  Used with Failure, Cause and Action Codes for reliability analysis</description>
        <inlineHelpText>Cause Code:  Used with Failure, Cause and Action Codes for reliability analysis</inlineHelpText>
        <label>Cause Code</label>
        <picklist>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Work Order Class</description>
        <inlineHelpText>Work Order Class when using expanded 4 tier Type/Class</inlineHelpText>
        <label>Class</label>
        <picklist>
            <controllingField>Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Major Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Clean/Replace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lubrication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Adjustments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSHA Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework of Previous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Major Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Startup/Standby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Work Order Close Date - Populated via Workflow.  Can be manually overridden.</description>
        <inlineHelpText>Work Order Close Date - Populated via Workflow.  Can be manually overridden.</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Comments__c</fullName>
        <description>Work Order Completion Comments</description>
        <inlineHelpText>Work Order Completion Comments</inlineHelpText>
        <label>Completion Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Work Order Completion Date.  This date is automatically populated with the User&apos;s current system Date when the Work Order Status is updated to Completed.  Can be overwritten with user specified Date.</description>
        <inlineHelpText>Work Order Completion Date.  This date is automatically populated with the User&apos;s current system Date when the Work Order Status is updated to Completed.  Can be overwritten with user specified Date.</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Notes__c</fullName>
        <description>Work Order Completion Notes</description>
        <inlineHelpText>Work Order Completion Notes</inlineHelpText>
        <label>Completion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_by_Email_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Email Service is a Set to True via APEX code is the Work Order was created using the createWorkOrder APEX class.  Used to initiate workflow processes.</description>
        <inlineHelpText>Created by Email Service is a Set to True via APEX code is the Work Order was created using the createWorkOrder APEX class.  Used to initiate workflow processes.</inlineHelpText>
        <label>Created by Email Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delay_SubType__c</fullName>
        <description>Delay Sub Type (dependent on Delay Type)</description>
        <inlineHelpText>Delay Sub Type (dependent on Delay Type)</inlineHelpText>
        <label>Delay SubType</label>
        <picklist>
            <controllingField>Delay_Type__c</controllingField>
            <picklistValues>
                <fullName>Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock Out - Tag Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawings Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawings Wrong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts List Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scope Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interrupted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delay_Type__c</fullName>
        <description>Delay Type</description>
        <inlineHelpText>Delay Type</inlineHelpText>
        <label>Delay Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Delays</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <description>Formula reference from Dept on Maintenance Asset</description>
        <formula>TEXT(Equipment__r.Dept__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference from Dept on Maintenance Asset</inlineHelpText>
        <label>Dept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Work Order Description</description>
        <inlineHelpText>Work Order Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Comments__c</fullName>
        <description>Work Order Detailed Comments</description>
        <inlineHelpText>Work Order Detailed Comments</inlineHelpText>
        <label>Detailed Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Downtime_hrs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Hours of Downtime Incurred</description>
        <inlineHelpText>Hours of Downtime Incurred</inlineHelpText>
        <label>Downtime Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due Date is the original planned and/or scheduled completion date is used for schedule compliance measurement.</description>
        <inlineHelpText>Due Date is the original planned and/or scheduled completion date is used for schedule compliance measurement.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equip_Description__c</fullName>
        <description>Formula reference to Maintenance Asset Description</description>
        <formula>Equipment__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to Maintenance Asset Description</inlineHelpText>
        <label>Asset Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset ID</description>
        <inlineHelpText>Asset ID</inlineHelpText>
        <label>Asset ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Equipment__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Disposed</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Work Order History</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <description>Expense Types used to categorize work orders</description>
        <inlineHelpText>Expense Types used to categorize work orders</inlineHelpText>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <description>Failure Code:  Used with Failure, Cause and Action Codes for reliability analysis</description>
        <inlineHelpText>Failure Code:  Used with Failure, Cause and Action Codes for reliability analysis</inlineHelpText>
        <label>Failure Code</label>
        <picklist>
            <picklistValues>
                <fullName>F1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Description__c</fullName>
        <description>Work Order ID &amp; Description Concatenated for ease of Grouping on Reports</description>
        <formula>Name &amp; &quot; &quot; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Work Order ID &amp; Description Concatenated for ease of Grouping on Reports</inlineHelpText>
        <label>ID &amp; Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Est_Hours__c</fullName>
        <defaultValue>(IF(ISNULL( $Setup.Work_Order_Install_Para__c.Initial_Est_Hrs__c ), 0.00, $Setup.Work_Order_Install_Para__c.Initial_Est_Hrs__c))</defaultValue>
        <description>Initial estimated hours to assign to assign on the WO_Task during the autocreate WO_Task trigger</description>
        <inlineHelpText>Estimated hours to assign to the initial Work Order Task upon Work Order Creation</inlineHelpText>
        <label>Initial Est Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Work Order Instructions - Rich Text Format</description>
        <inlineHelpText>Work Order Instructions - Rich Text Format</inlineHelpText>
        <label>Instructions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Work_Order_ID__c</fullName>
        <description>Used to Capture Historical Work Order ID during a data migration</description>
        <inlineHelpText>Used to Capture Historical Work Order ID during a data migration</inlineHelpText>
        <label>Legacy Work Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRVAWOC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Meter Reading at Work Order Completion.  System populated via workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Meter Reading at Work Order Completion.  System populated via workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Meter Reading at WO Completion</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parts_Expense_Account__c</fullName>
        <description>Parts Expense Account</description>
        <inlineHelpText>Parts Expense Account</inlineHelpText>
        <label>Parts Expense Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Order Planner - Lookup to User</description>
        <inlineHelpText>Work Order Planner - Lookup to User</inlineHelpText>
        <label>Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders_Planner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Work Order Priority - User defined values</description>
        <inlineHelpText>Work Order Priority - User defined values</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>System Outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Outage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <description>Work Order Requested Completion Date</description>
        <inlineHelpText>Work Order Requested Completion Date</inlineHelpText>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequesterEmail__c</fullName>
        <description>Requester Email is populated from the senders address through the email services.  System populated via Workflow.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Requester Email is populated from the senders address through the email services.  System populated via Workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Safety_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Safety Related Work Order - User specified</description>
        <inlineHelpText>Safety Related Work Order - User specified</inlineHelpText>
        <label>Safety Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Completion_Date__c</fullName>
        <description>Work Order Scheduled Completion Date</description>
        <inlineHelpText>Work Order Scheduled Completion Date</inlineHelpText>
        <label>Scheduled Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <description>Work Order Scheduled Start Date</description>
        <inlineHelpText>Work Order Scheduled Start Date</inlineHelpText>
        <label>Scheduled Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Num__c</fullName>
        <description>Work Order Status numerical value.</description>
        <formula>CASE( TEXT( Status__c ) , &quot;Approved&quot;, 1, &quot;Canceled&quot;, 2, &quot;Closed&quot;, 3, &quot;Completed&quot;, 4, &quot;In Planning&quot;, 5, &quot;In Progress&quot;, 6, &quot;Rejected&quot;, 7, &quot;Request&quot;, 8, &quot;Scheduled&quot;, 9, &quot;Waiting Approval&quot;, 10, &quot;Hold&quot;, 11, &quot;Ready to Schedule&quot;, 12,13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Work Order Status numerical value.</inlineHelpText>
        <label>Status_Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Work Order Status - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!  Unexpected results will occur.</description>
        <inlineHelpText>Work Order Status - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST!  Unexpected results will occur.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <description>Work Order Sub Class Dependent Upon Class</description>
        <inlineHelpText>Work Order Sub Class when using expanded 4 tier Type/Class</inlineHelpText>
        <label>Sub Class</label>
        <picklist>
            <controllingField>Class__c</controllingField>
            <picklistValues>
                <fullName>Day Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informational Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line Shutdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant/Grounds General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shift Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stores Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Plant Shutdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultasonic Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vibration Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Work Order Sub Type dependent upon Type</description>
        <inlineHelpText>Work Order Sub Type when using expanded 4 tier Type/Class</inlineHelpText>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corrective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Predictive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From Operator Driven Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebuild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabricate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test &amp; Calibrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Driven Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WO_Type__c</fullName>
        <description>Work Order Types are used to categorize Work Orders.  User specified list of values.</description>
        <inlineHelpText>Work Order Types are used to categorize Work Orders.  User specified list of values.</inlineHelpText>
        <label>WO Type</label>
        <picklist>
            <picklistValues>
                <fullName>Changeover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrective</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairable Spare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WO_User_Picklist_1__c</fullName>
        <description>The Work Order User Picklist 1 field is a user definable field which is copied in the custom deep clone process.</description>
        <inlineHelpText>The Work Order User Picklist 1 field is a user definable field which is copied in the custom deep clone process.</inlineHelpText>
        <label>WO User Picklist 1</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WO_User_Text_1__c</fullName>
        <description>The Work Order User Text 1 field is a user definable field which is copied in the custom deep clone process.</description>
        <inlineHelpText>The Work Order User Text 1 field is a user definable field which is copied in the custom deep clone process.</inlineHelpText>
        <label>WO User Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>